ENT-3900: Add support for multi-env entitlement cert regeneration
- Generate entitlement cert using multiple environments
- Deduplicate promoted content
- Handle environment-specific content paths